--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>ToDoList</title>
 </head>
 <body>
@@ -16,15 +17,17 @@
 
     <div class="container">
         <h2>A Simple To Do List App</h2>
-        <form action="http://localhost:3000/tasks" method="post">
+        <form action="http://localhost:3000/tasks" method="post" id="formTasks">
             <input type="text" name="newTask" placeholder="add a new task">
             <button type="submit">Add task</button>
         </form>
 
-        <div class="tasks">
+        <div>
+            
             <% for(let i=0; i<tasks.length; i++){ %>
-                <p> <%=tasks[i].text %></p>
+                <div class="task"><span> <%=tasks[i].text %></span> <button type="submit">Delete</button></div>
             <% } %>
+            
         </div>
     </div>
 </body>
