--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
 .container {
     margin: auto;
     width: 50%;
+    max-width: 400px;
 }
 
 .container>h2{
@@ -18,7 +19,7 @@
 }
 .task {
     padding: 5px;
-    margin: 20px 0;
+    margin: 15px 0;
     display: flex;
     flex-flow: row;
     justify-content: space-between;
@@ -32,5 +33,9 @@
 .inputs li{
     list-style: none;
     margin: 15px 0;
+}
+
+input[type=checkbox]{
+    margin-right: 8px;
 }
 
