--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,13 +8,7 @@
     <title>ToDoList</title>
 </head>
 <body>
-    <!--<h2>Hello! You are in the index file!</h2>
-    <h3><%=name %>, you created me!</h3>
-    <h3> </h3>
-    <% for(let i=0; i<length; i++){ %>
-        <p> I will repeat this <%=length %> times!</p>
-    <% } %>-->
-
+    
     <div class="container">
         <h2>A Simple To Do List App</h2>
         <form action="http://localhost:3000/tasks" method="post" id="formTasks">
@@ -25,10 +19,29 @@
         <div>
             
             <% for(let i=0; i<tasks.length; i++){ %>
-                <div class="task"><span> <%=tasks[i].text %></span> <button type="submit">Delete</button></div>
+                <div class="task"><span><input type= checkbox value=<%=tasks[i].text %>><%=tasks[i].text %> </span><input class= delete type="button" value= 'Delete' id='<%=tasks[i].id %>'></div>
             <% } %>
             
         </div>
     </div>
+    <script>
+        console.log('script')
+        let btns = document.querySelectorAll('.delete');
+        for (let btn of btns){
+            btn.addEventListener('click', deleteTask)
+
+        }
+        function deleteTask(){
+            console.log(this.id)
+            //preventDefault();
+            fetch(`http://localhost:3000/tasks/${this.id}`, 
+            {method: 'DELETE'})
+            .then(response => response.json())
+            .then(data => window.location = data.redirect_path)
+            
+        }
+        
+        
+    </script>
 </body>
 </html>
