--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,28 +1,39 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <title>Form</title>
+    <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <h2>Log in to your account</h2>
-        <form action="http://localhost:3001/auth/login", method = "post" id="login">
+        <h2>Create a new account</h2>
+        <form action="/auth/register" method="post" id="login">
             <ul class="inputs">
                 <li>
-                    <label for="name">Email</label>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name">
+                </li>
+                <li>
+                    <label for="email">Email</label>
                     <input type="email" id="email" name="email">
                 </li>
                 <li>
                     <label for="password">Password</label>
-                    <input type="password" id="pwd" name="password">
+                    <input type="password" id="password" name="password">
                 </li>
             </ul>
-            <input type="submit" value="Log in">
+            <input type="submit" value="Create User">
         </form>
+       
     </div>
+    
+    <script>
+
+        
+  
+    </script>
 </body>
 </html>
