--- a/react-frontend/src/components/Header.css
+++ b/react-frontend/src/components/Header.css
@@ -3,7 +3,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  background-color: blueviolet;
+  background-color: rgb(74, 67, 81);
 }
 .header-item {
   list-style-type: none;
@@ -13,10 +13,11 @@
   display: block;
   text-decoration: none;
   padding: 15px;
+  color: white;
 }
 
 .header-item a:hover {
-  background-color: azure;
+  background-color: rgb(86, 94, 94);
 }
 
 .header-item a .active {
